--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Frontend Mentor | Bookmark Landing Page</title>
+    <title>Bookmark Landing Page</title>
     <script defer src="./js/script.js"></script>
 </head>
 <body>
