--- a/index.html
+++ b/index.html
@@ -185,12 +185,7 @@
             </div>
            
         </div>
-        <p class="attribution">
-            Challenge by
-            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-              >Frontend Mentor</a
-            >. Coded by <a href="#">Sandra Mitjans</a>.
-          </p>
+        <p class="attribution">Coded by <a href="#">Sandra Mitjans</a>.</p>
     </footer>
 </body>
 </html>
